Revert "Created A DB"
This reverts commit 4509d53847ca76a9e9cd9a5a3593fdeb15897837.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,8 @@
 ﻿@{
-	ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page";
 }
 
-@foreach (Products product in ViewBag.Products)
-{
-	<h6>Id : @product.Id</h6>
-	<li>Name : @product.Name</li>
-	<li>Price : @product.Price</li>
-	<br />
-
-}
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
