--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using LearningEntityFramework
-@using LearningEntityFramework.Models
+﻿@using PizzaStore
+@using PizzaStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
