--- a/Views/AddProduct/Index.cshtml
+++ b/Views/AddProduct/Index.cshtml
@@ -6,15 +6,51 @@
 
 <h2>All Products</h2>
 
+<style>
+	table {
+		width: 50%;
+	}
+
+	td {
+		padding: 5px;
+		border: 1px solid #ddd;
+	}
+
+	tr:hover {
+		background-color: #f1f1f1;
+	}
+</style>
+
 <table>
+	<tr>
+		<td>
+			Product Name
+		</td>
+
+		<td>
+			Price
+		</td>
+
+		<td colspan="2">
+			Actions
+		</td>
+
+	</tr>
 	@foreach (Products products in Model)
 	{
 		<tr>
-			<td>@products.Name</td>
+			<td style="width:20%">@products.Name</td>
 
-			<td>@products.Price</td>
+			<td style="width:20%">$@products.Price</td>
 
-			<td>@Html.ActionLink("Edit", "Edit", new { id = products.Id })</td>
+			<td style="width:20%">@Html.ActionLink("Edit", "Edit", new { id = products.Id })</td>
+
+			<td style="width:1%">
+				@using (Html.BeginForm("Delete", "AddProduct", new { id = products.Id }))
+				{
+					<input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete the @products.Name')" />
+				}
+			</td>
 		</tr>
 	}
 </table>
