refactored the name of Products to product

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 	ViewData["Title"] = "Home Page";
 }
 
-@foreach (Products product in ViewBag.Products)
+@foreach (Product product in ViewBag.Products)
 {
 	<h6>Id : @product.Id</h6>
 	<li>Name : @product.Name</li>
