--- a/Views/AddProduct/Index.cshtml
+++ b/Views/AddProduct/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PizzaStore.Models.Products>
+﻿@model IEnumerable<PizzaStore.Models.Product>
 
 @{
 	ViewData["Title"] = "Add New Product";
@@ -36,7 +36,7 @@
 		</td>
 
 	</tr>
-	@foreach (Products products in Model)
+	@foreach (Product products in Model)
 	{
 		<tr>
 			<td style="width:20%">@products.Name</td>
