Can now select which pizza to buy, and added a description property to all products!

--- a/Views/AddProduct/Edit.cshtml
+++ b/Views/AddProduct/Edit.cshtml
@@ -34,6 +34,14 @@
 			@Html.ValidationMessageFor(model => model.Price)
 		</div>
 
+		<div class="editor-label">
+			@Html.LabelFor(Model => Model.Descriptions)
+		</div>
+		<div class="editor-field">
+			@Html.TextAreaFor(Model => Model.Descriptions, 5, 50, "null")
+			@Html.ValidationMessageFor(model => model.Descriptions)
+		</div>
+
 		<br />
 		<p>
 			<input type="submit" value="Save Changes" />
