--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,32 @@
-﻿@{
+﻿@model IEnumerable<PizzaStore.Models.Product>;
+
+@{
 	ViewData["Title"] = "Home Page";
 }
 
-@foreach (Product product in ViewBag.Products)
-{
-	<h6>Id : @product.Id</h6>
-	<li>Name : @product.Name</li>
-	<li>Price : @product.Price</li>
-	<br />
+<style>
+	table {
+		width: 50%;
+	}
 
-}
+	td {
+		padding: 5px;
+		border: 1px solid #ddd;
+	}
+
+	tr:hover {
+		background-color: #f1f1f1;
+	}
+</style>
+<table>
+	<h2>Pizzas</h2>
+	@foreach(Product product in @Model){
+		<tr onclick="location.href = '@Url.Action("test", "Home", new { id = product.Id })'">
+			<td style="width:20%">@product.Name</td>
+
+			<td style="width:20%">@product.Price</td>
+		</tr>
+		
+	}
+	
+</table>
