--- a/Views/Home/ViewCart.cshtml
+++ b/Views/Home/ViewCart.cshtml
@@ -17,6 +17,9 @@
 		<li>
 			$@orderDetail.Product.Price each
 		</li>
+		<li>
+			$@(orderDetail.Product.Price * orderDetail.Quantity) Total
+		</li>
 
 		<br />
 		
