--- a/Views/Customer/LogIn.cshtml
+++ b/Views/Customer/LogIn.cshtml
@@ -1,5 +1,40 @@
-﻿
+﻿@model PizzaStore.Models.Customer
 
 @{
 	ViewData["Title"] = "Log In";
+}
+
+@using (Html.BeginForm())
+{
+	Html.ValidationSummary(true);
+	<fieldset>
+		<legend>Log In</legend>
+
+		<div class="editor-label">
+			@Html.LabelFor(Model => Model.Email) *
+
+		</div>
+		<div class="editor-field">
+			@Html.EditorFor(Model => Model.Email)
+			@Html.ValidationMessageFor(model => model.Email)
+		</div>
+
+		<div class="editor-label">
+			@Html.LabelFor(Model => Model.Password) *
+		</div>
+		<div class="editor-field">
+			@Html.EditorFor(Model => Model.Password)
+			@Html.ValidationMessageFor(model => model.Password)
+		</div>
+
+		<br />
+		@if (ViewBag.Exists == "False")
+		{
+			<div>Email or password is incorrect</div>
+		}
+		<p>
+			<input type="submit" value="Log In" />
+		</p>
+
+	</fieldset>
 }
