--- a/Views/Customer/SignUp.cshtml
+++ b/Views/Customer/SignUp.cshtml
@@ -28,6 +28,7 @@
 
 		<div class="editor-label">
 			@Html.LabelFor(Model => Model.Email) *
+			
 		</div>
 		<div class="editor-field">
 			@Html.EditorFor(Model => Model.Email)
@@ -59,8 +60,13 @@
 		</div>
 
 		<br />
+		@if (ViewBag.DupEmail == "True")
+		{
+			<div>Account already created for email, try logging in</div>
+		}
 		<p>
-			<input type="submit" value="Create" />
+			<input type="submit" value="Sign Up" />
 		</p>
+		
 	</fieldset>
 }
