Checking out without logging in first, sends you to the login page, then back to checkout

--- a/Views/Home/ViewCart.cshtml
+++ b/Views/Home/ViewCart.cshtml
@@ -26,6 +26,6 @@
 The total cost of the cart is: 
 $@ViewData["Total"]
 <br />
-<p onclick="location.href = '@Url.Action("Checkout", "Checkout")'">
+<p onclick="location.href = '@Url.Action("Index", "Checkout")'">
 	<input type="button" value="Checkout" />
 </p>
