--- a/Views/Home/Add.cshtml
+++ b/Views/Home/Add.cshtml
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="editor-label">
-			@Html.Label("Select a Quantity between 1-10")
+			@Html.Label("Select any Quantity")
 		</div>
 		<div class="editor-field">
 			@Html.EditorFor(Model => Model.Quantity)
