lot of stuff broke and fixed, switched around order entirely

--- a/Views/Checkout/Index.cshtml
+++ b/Views/Checkout/Index.cshtml
@@ -37,7 +37,7 @@
 	Please select the pickup method
 </div>
 <div>
-	<a onclick="location.href = '@Url.Action("Pickup", "Checkout")'">
+	<a onclick="location.href = '@Url.Action("Confirm", "Checkout", "method=Pickup")'">
 		<input type="button" value="Pickup" />
 	</a>
 	|
