--- a/Views/Checkout/Delivery.cshtml
+++ b/Views/Checkout/Delivery.cshtml
@@ -9,18 +9,24 @@
 	{
 		@Html.ValidationSummary(true)
 		<fieldset>
+
+			<div class="editor-field">
+				<p>
+					@Html.HiddenFor(model => model.Id)
+				</p>
+			</div>
 			<div class="editor-label">
 				Input the address for Delivery
 			</div>
 			<div class="editor-field">
-				@Html.EditorFor(Model => Model.Address)
+				@Html.EditorFor(model => model.Address, new {required="required"})
 				@Html.ValidationMessageFor(model => model.Address)
 			</div>
 		</fieldset>
 
 		<br />
 		<p>
-			<input type="submit" value="Create" />
+			<input type="submit" value="Add Address" />
 		</p>
 	}
 }
