--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using PizzaStore.Data
+@using System.Diagnostics
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -24,7 +26,16 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Menu</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewCart">View Cart</a>
+							@{
+								int OrderId = -1;
+								if (TempData.Peek("CustomerId") != null)
+								{
+									int customerId = int.Parse(TempData.Peek("CustomerId").ToString());
+									PizzaContext context = new PizzaContext();
+									OrderId = context.Orders.Single(o => o.CustomerId == customerId).Id;
+								}
+							}
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewCart" asp-route-OrderId="@OrderId">View Cart</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="AddProduct" asp-action="Index">Add Product</a>
