--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 	}
 </style>
 <table>
-	<h2>Pizzas</h2>
+	<h2>Pizzas and burgers</h2>
 	@foreach(Product product in @Model){
 		<tr onclick="location.href = '@Url.Action("Add", "Home", new { id = product.Id })'">
 			<td style="width:20%">@product.Name</td>
