--- a/Views/Home/ViewCart.cshtml
+++ b/Views/Home/ViewCart.cshtml
@@ -26,6 +26,6 @@
 The total cost of the cart is: 
 $@ViewData["Total"]
 <br />
-<a onclick="location.href = '@Url.Action("Index", "Checkout")'">
+<a href = "@Url.Action("Index", "Checkout")">
 	<input type="button" value="Checkout" />
 </a>
