--- a/Views/Home/ViewCart.cshtml
+++ b/Views/Home/ViewCart.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Cart";
 }
 
-<ul>
+<ul style="list-style: none;">
 	@foreach (OrderDetail orderDetail in Model)
 	{	
 		//Should send you to an edit page not add but fine for now
@@ -12,13 +12,16 @@
 			@orderDetail.Product.Name
 		</h6>
 		<li>
-			@Html.ActionLink("Quantity: " + orderDetail.Quantity.ToString(), "EditCart", new { id = orderDetail.Id })
+			@Html.ActionLink("Quantity: " + orderDetail.Quantity.ToString(), "EditCart", new { id = orderDetail.Id })		
 		</li>
 		<li>
 			$@orderDetail.Product.Price each
 		</li>
 		<li>
 			$@(orderDetail.Product.Price * orderDetail.Quantity) Total
+		</li>
+		<li>
+			@Html.ActionLink("Remove From Cart", "Delete", new {id = orderDetail.Id})
 		</li>
 		<br />
 	}
