--- a/Views/Home/Add.cshtml
+++ b/Views/Home/Add.cshtml
@@ -26,14 +26,14 @@
 		</div>
 		<div class="editor-field">
 			@Html.EditorFor(Model => Model.Quantity)
-			@Html.ValidationMessageFor(Model => Model.Quantity)
+			@if (ViewBag.Negative == "true")
+			{
+				<a style="color: red">
+					The quantity must be greater than 0
+				</a>
+			}
 		</div>
-		@if(ViewBag.Negative == "true")
-		{
-			<p style ="color: red">
-				The quantity must be greater than 0
-			</p>
-		}
+		
 
 		<br />
 		<p>
