--- a/Views/Home/Add.cshtml
+++ b/Views/Home/Add.cshtml
@@ -36,11 +36,7 @@
 		
 
 		<br />
-		<p>
-			<input type="submit" value="Add to Cart" />
-		</p>
-
+		<input type="submit" value="Add to Cart" class="btn btn-primary" />
+		<a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
     </fieldset>
 }
-
-@Html.ActionLink("Back to List", "Index")
