--- a/Views/Home/EditCart.cshtml
+++ b/Views/Home/EditCart.cshtml
@@ -34,9 +34,7 @@
 				</a>
 			}
 		</div>
-
-		<p>
-			<input type="submit" value="Save Changes" />
-		</p>
+		<br />
+		<input type="submit" value="Save Changes" class="btn btn-outline-secondary"/>
     </fieldset>
 }
