--- a/Views/Customer/LogIn.cshtml
+++ b/Views/Customer/LogIn.cshtml
@@ -32,9 +32,6 @@
 		{
 			<div>Email or password is incorrect</div>
 		}
-		<p>
-			<input type="submit" value="Log In" />
-		</p>
-
+		<button type="submit">Log in</button>
 	</fieldset>
 }
