made all buttons look nice

--- a/Views/Customer/SignUp.cshtml
+++ b/Views/Customer/SignUp.cshtml
@@ -65,7 +65,7 @@
 			<div>Account already created for email, try logging in</div>
 		}
 		<p>
-			<input type="submit" value="Sign Up" />
+			<input type="submit" value="Sign Up" class="btn btn-outline-primary"/>
 		</p>
 		
 	</fieldset>
