--- a/Views/Customer/LogIn.cshtml
+++ b/Views/Customer/LogIn.cshtml
@@ -32,6 +32,6 @@
 		{
 			<div>Email or password is incorrect</div>
 		}
-		<button type="submit">Log in</button>
+		<button type="submit" class="btn btn-outline-primary">Log in</button>
 	</fieldset>
 }
