--- a/Presentation/Views/Home/ViewCart.cshtml
+++ b/Presentation/Views/Home/ViewCart.cshtml
@@ -4,6 +4,8 @@
 	ViewData["Title"] = "Cart";
 }
 
+
+
 @if (Model.FirstOrDefault() == null)
 {
 	<p>Your cart is empty!</p>
@@ -14,33 +16,36 @@
 
 else
 {
-	
-		@foreach (OrderDetail orderDetail in Model)
-		{
-			<h6>
-				@orderDetail.Product.Name
-			</h6>
+	<h3 style="text-align:center">Your Cart</h3>
+	@foreach (OrderDetail orderDetail in Model)
+	{
+		<h6>
+			@orderDetail.Product.Name
+		</h6>
+		<img src="~/css/productimages/@orderDetail.Product.Image" width="150"/>
 		<ul class="list-unstyled">
 			<li>
-				Quantity: @orderDetail.Quantity
+				Quantity: @orderDetail.Quantity &ensp;$@(orderDetail.Product.Price* orderDetail.Quantity)
 			</li>
 			<li>
-				$@orderDetail.Product.Price each
-			</li>
-			<li>
-				$@(orderDetail.Product.Price* orderDetail.Quantity) Total
-			</li>
-			<li>
-				<a asp-action="EditCart" asp-route-id="@orderDetail.Id " class="btn btn-outline-secondary btn-sm">
-					Edit Item Quantity
+				<a asp-action="QuantityDown" asp-route-id="@orderDetail.Id" class="btn btn-outline-secondary btn-sm">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1" />
+					</svg>
 				</a>
-			</li>	
+				&emsp;&emsp;&emsp;
+				<a asp-action="QuantityUp" asp-route-id="@orderDetail.Id" class="btn btn-outline-secondary btn-sm">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" />
+					</svg>
+				</a>
+			</li>
 			<li>
 				<a asp-action="Delete" asp-route-id="@orderDetail.Id" class="btn btn-danger btn-close"></a>
 			</li>
-			</ul>
-			<br />
-		}
+		</ul>
+		<br />
+	}
 	<p>
 		The total cost of the cart is:
 		$@ViewData["Total"]
